Fix overflow bug

--- a/src/core/styles.scss
+++ b/src/core/styles.scss
@@ -87,6 +87,7 @@ $controls-window-initial-width: 500px;
 
     &-active-story {
         background-color: $background-color;
+        overflow: hidden;
         height: 100%;
         flex: 1;
         min-width: 200px;
